@@ -1,3 +1,14 @@
+2007-08-20  Andrew John Hughes  <andrew@dcs.shef.ac.uk>
+
+	* src/uk/ac/shef/dcs/tnt-dynamite/Process.java:
+	Add package name.
+	* configure.ac,
+	* lib/gen-classlist.sh.in,
+	* lib/Makefile.am,
+	* acinclude.m4,
+	* Makefile.am:
+	Support javac and build DynamiTE.
+	
 2007-08-17  Andrew John Hughes  <andrew@dcs.shef.ac.uk>
 
 	* LICENSE,
